--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="content">
     <div class="contenir">
-        <a href="uzcod/index.html">
+        <a href="2-bo'lim/index.html">
             <span></span>
             <span></span>
             <span></span>
