--- a/2-bo'lim/index.html
+++ b/2-bo'lim/index.html
@@ -508,10 +508,10 @@
                     <h2>Aloqa uchun</h2>
                     <ul class="list-unstyled li-space-lg">
                         <li class="address">Agar sizga tavsiya va maslahatlar kerakmi unda quyidagi ishonch raqamari va elektron pochtalariga murojaat qiling.</li>
-                        <li><i class="fas fa-map-marker-alt"></i><b>Manzil: Andijon viloyati, Buloqboshi tumani, Soliq qo'mitasi binosi to'g'risida.</b></li>
-                        <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:+998905292551">+998 90 529 25 51</a></li>
+                        <li><i class="fas fa-map-marker-alt"></i><b>Manzil: Andijon viloyati, Buloqboshi tumani.</b></li>
+                        <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:+998906231884">+998 90 623 18 84</a></li>
                         <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:+998932281884">+998 93 228 18 84</a></li>
-                        <li><i class="fas fa-envelope"></i><a class="turquoise" href="botirahmedov200@gmail.com">botirahmedov200@gmail.com</a></li>
+                        <li><i class="fas fa-envelope"></i><a class="turquoise" href="botircoders@gmail.com">botirahmedov200@gmail.com</a></li>
                     </ul>
                 </div>
                 <!-- end of col -->
@@ -584,7 +584,7 @@
                             </a>
                         </span>
                             <span class="fa-stack">
-                            <a href="botirahmedov200@gmail.com">
+                            <a href="botircoders@gmail.com">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-google-plus-g fa-stack-1x"></i>
                             </a>
