--- a/2-bo'lim/index.html
+++ b/2-bo'lim/index.html
@@ -511,7 +511,7 @@
                         <li><i class="fas fa-map-marker-alt"></i><b>Manzil: Andijon viloyati, Buloqboshi tumani.</b></li>
                         <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:+998906231884">+998 90 623 18 84</a></li>
                         <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:+998932281884">+998 93 228 18 84</a></li>
-                        <li><i class="fas fa-envelope"></i><a class="turquoise" href="botircoders@gmail.com">botirahmedov200@gmail.com</a></li>
+                        <li><i class="fas fa-envelope"></i><a class="turquoise" href="botircoders@gmail.com">botircoders@gmail.com</a></li>
                     </ul>
                 </div>
                 <!-- end of col -->
