--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="UzCoders Group.jpg">
 </head>
 <body>
-    <div class="content">
+    <div class="content" onload>
     <div class="contenir">
         <a href="2-bo'lim/index.html">
             <span></span>
@@ -65,5 +65,8 @@
         </li>
     </ul>
 </div>
+<script>
+alert("Rasm ustiga bosing")
+</script>
 </body>
 </html>
