--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     <div id="contact" class="form-2" style="color: black; background-attachment: white; padding: 25px 30px;">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12  text-black-50">
                     <h2>Aloqa uchun</h2>
                     <ul class="list-unstyled li-space-lg">
                         <li class="address">Agar sizga tavsiya va maslahatlar kerakmi unda quyidagi ishonch raqamari va elektron pochtalariga murojaat qiling.</li>
